fix sessions list gap and update card and sidebar colors to match figma

--- a/src/components/sessionsListItem/sessionsListItem.styles.scss
+++ b/src/components/sessionsListItem/sessionsListItem.styles.scss
@@ -93,7 +93,7 @@ $session-postcode-border: #ffd1d1;
 		padding-right: 6px;
 		padding-top: 12px;
 		margin: 0 $grid-base-two;
-		background-color: $sessions-list-background-color-secondary;
+		background-color: $session-list-item-background-default;
 		border: 1px solid $session-light-border;
 		border-radius: 0;
 		transition: all 0.6s ease;
